Too many changes to list, several files switched and cleaned up, need CSS to work properly, need idb to work properly

--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,7 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
-    "start": "concurrently \"npm run server\" \"npm run webpack\"",
-    "webpack": "webpack --watch",
-    "server": "node server/index.js",
-    "install": "npm install"
+    "start": "webpack --watchAll"
   
   },
   "author": "2U",
