--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
+  "name": "react-text-editor",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server nodemon server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "client": "cd client && npm start",
+    "postinstall": "npm run build"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "eslint": "^8.53.0",
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "prettier": "^3.1.0"
+    "express": "^4.17.1",
+    "idb": "^7.1.1"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^5.5.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
+    "concurrently": "^5.2.0",
     "workbox-webpack-plugin": "^7.0.0"
   }
 }
